fixed account summary fragment crash issue